[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config"}
icons = { path = "../icons"}
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-hooks = { git = "https://github.com/jetli/yew-hooks" }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }

[build-dependencies]
config = { path = "../config" }
