[package]
name = "showcase"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
commander-components = { path = "../components" }
config = { path = "../config" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

[build-dependencies]
commander-components = { path = "../components" }
